{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 37,
  "lineage": "1bb62613-ff87-f1fb-0a42-2088bb433350",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "blog_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005f9685cb30f234b",
            "arn": "arn:aws:ec2:us-east-1:757165215724:instance/i-00c279cc363d298a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c279cc363d298a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-ec2-windows",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08b924b46518cec3f",
            "private_dns": "ip-172-31-55-109.ec2.internal",
            "private_ip": "172.31.55.109",
            "public_dns": "ec2-54-197-131-165.compute-1.amazonaws.com",
            "public_ip": "54.197.131.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b0c89bb9692f15ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_download",
              "allow_http",
              "allow_https",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041f3cb9f30036f8f",
            "tags": {
              "Environment": "prod",
              "Name": "blog_ec2",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "blog_ec2",
              "Provisioner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e87ceca0a2f3169",
              "sg-0ce1cbfe867b47be8",
              "sg-0d02c6174e238e220",
              "sg-0fb60fe87c6ae8c31"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_download",
            "aws_security_group.allow_http",
            "aws_security_group.allow_https",
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_download",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757165215724:security-group/sg-0fb60fe87c6ae8c31",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb60fe87c6ae8c31",
            "ingress": [],
            "name": "allow_download",
            "name_prefix": "",
            "owner_id": "757165215724",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058a365c924fe27b6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757165215724:security-group/sg-0ce1cbfe867b47be8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ce1cbfe867b47be8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "757165215724",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058a365c924fe27b6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757165215724:security-group/sg-0d02c6174e238e220",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d02c6174e238e220",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "757165215724",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058a365c924fe27b6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:757165215724:security-group/sg-09e87ceca0a2f3169",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09e87ceca0a2f3169",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "757165215724",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058a365c924fe27b6"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}